# AdventOfCode2022

./: .gitignore  CMakeLists.txt  README.md  index.html
.devcontainer/: Dockerfile
.github/workflows/: ci-2022-cpp.yml  codeql.yml  debug-ssh.yml  flawfinder.yml  msvc.yml  webapp.yml
2022/cpp/: .gitignore  CMakeLists.txt
2022/cpp/examples/: CMakeLists.txt
2022/cpp/examples/aoc-web/: .gitignore  CMakeLists.txt  tsconfig.json
2022/cpp/examples/aoc-web/src/: CMakeLists.txt  WasmCallbacks.d.ts  aoc-web.cpp  aoc.ts  library.ts
2022/cpp/examples/aoc-web/www/: index.html  index.html.in
2022/cpp/examples/aoc_cli/src/: cli_main.cpp
2022/cpp/include/: aoc_y2022.hpp  ipuzzle.hpp  puzzle_factory.hpp  types.hpp
2022/cpp/src/: CMakeLists.txt  day01.cpp  day03.cpp  day04.cpp  day05.cpp  day06.cpp  day07.cpp  day08.cpp  day09.cpp  day10.cpp  day11.cpp  day12.cpp  day17.cpp  puzzle_common.hpp  puzzle_factory.cpp  utils.hpp
2022/cpp/tests/: test_day02.cpp  test_day03.cpp  test_day04.cpp  test_day05.cpp  test_day06.cpp  test_day07.cpp  test_day08.cpp  test_day09.cpp  test_day10.cpp  test_day11.cpp  test_day12.cpp  test_day17.cpp
cpp/: CMakeLists.txt
cpp/examples/: CMakeLists.txt
cpp/examples/aoc_cli/: CMakeLists.txt
cpp/examples/aoc_cli/src/: CMakeLists.txt
cpp/include/: CMakeLists.txt  puzzle_factory.hpp  types.hpp
cpp/src/: CMakeLists.txt  day01.cpp  day02.cpp  day03.cpp  puzzle_factory.cpp  utils.hpp
cpp/tests/: CMakeLists.txt  test_day01.cpp
